@@ -6,7 +6,7 @@
 1628169185 438e24825a995691408e173f95e79d6c45540591cf7397020cbb03aebc40c216e8b74eb7016474798196794c72d5afc4efaa0108a387900d81f5f7791ce51c08 SOURCE/PGME/BUILD.BAT
 1627934430 f8383a5edc04b6113db78cda2143e29abaab2149c8c7ebbfa7bfe68739323e256fa5f767ce6651169501471fd6982629cb86004ad4e90f16aeb206d56dd4ac1a SOURCE/PGME/CLEAN.BAT
 1627980145 babd8780f308b8ecd082132a088db1402c0e38ddea4e337d1ad571e0c3d163dc94e030229a78192a04edd7be800df76e3848fd584fb8b94c52e42ed2d3ec763a SOURCE/PGME/CONTRIBUTING.md
-1628242319 594a900731ae66c39cc3db05bbff5fdf2c70b1cf5fbfa83843fa0d1abeb587a3ce31b9a9fb0420ef6a6f9aa6fdb550db29acb380eac471573abff1ae7d4b83e3 SOURCE/PGME/CUSTOM/config/ETERNITY.CFG
+1628260812 d06eb081a5e4499dcec52a96315cfe9f51205c8f1ffd78d6de44422063853002a9e8942ab4536df771805c90b57e31c5d3dbd128925446c7d006fb81709aa823 SOURCE/PGME/CUSTOM/config/ETERNITY.CFG
 1437956760 8d5d34d79cd66d983bea780a01827f225053c037d68593919f2f335343568747aed4542c7365e573cb55fa16b7a6494f6d4fb4aea18a4e8cad3fc02210bc2a80 SOURCE/PGME/CUSTOM/fonts/ALT814.FNT
 1437956760 79385d9b4c8cf9df9dae524a0ede786c297d25ebe1124824480fb597c768c4d4e126961fef1b3fd431059982fe3d64dceb7acb74c05a0de64d24fe68219aa70c SOURCE/PGME/CUSTOM/fonts/CAP816.FNT
 1591635961 b66d6996af50ddb82e46f2c1d5d6bcb081b781fbd8f39126bdfc9e2d7242fb232059ec7d0950b0013a686e05e9fe866ef3e2ea6434d12978e73a4f0425421509 SOURCE/PGME/CUSTOM/fonts/FR850-16.FNT
@@ -55,7 +55,7 @@
 1437956760 1e9001f9d361c8d79881fa2f8872b2f451ec7c31b673428ed3f8999e8867beab530db9061184894f2243751ccd6827aa45511e148058bc0cf41b0b18a34efcdd SOURCE/PGME/ETERNITY/SPLICE.PAS
 1628190330 24e261a1e4cb63bce2a9e13e062f11f64fee243304eeb0eb96f22373558c614c2bf6daf53a87a9c1ab70f3e333a487a1ffef52994bfcd5f8890dfb321d21e1c0 SOURCE/PGME/ETERNITY/TCACHEIT.INC
 1628153072 23d5ef3c235ded1ffe8ddf504a8e502ff4b26d0e28662f1a10a6313d7e31de27e13f1e53eca7d48d7878e9d3861f807b5f5714ece2381dea27996555c20383c1 SOURCE/PGME/ETERNITY/TDLGABOU.INC
-1628248364 610db5f4753d8ce6ab2d4eb233fe41efb25f43333710d9df3234aa48178336ea775a1d13915c2b10935814d045b3d088d8bda7a9698c1cfe361af926da1ff030 SOURCE/PGME/ETERNITY/TDLGCFG.INC
+1628264761 130726effada33907d4416be6128086a2dd37e38086d4e0cb4b09bb693ea2048b474215279c7a9634b2174fc21aa6a7881390d262ca915fa72160e5328838797 SOURCE/PGME/ETERNITY/TDLGCFG.INC
 1437956760 69e5752165dfbafb1ce193186fcb2e8956e04e7d1e5861a10917fb977615b106128f99e6b9695d6fe341bf4372d0865f2444f2dd348f76d67e91490eb959d9c8 SOURCE/PGME/ETERNITY/TDLGDOSC.INC
 1437956760 68364de6118e99d4ff4a9e63dab357fe3f9e0c0723a0ea0d805ab5014bbb5a0dc022d44f274fbf50f7a8ba43a8ee4ff8141a58df1929c430ad1e0eceaec8f799 SOURCE/PGME/ETERNITY/TDLGEXEC.INC
 1437956760 0cd7cd8d737cce876a833fef555f97a6f1198b3795837549fed60de712536b959a51ad36c75f3d3737e3554afd2b09ea9e6c7d4af1b3052efa1104e41cf138cc SOURCE/PGME/ETERNITY/TDLGLAUN.INC
@@ -64,14 +64,14 @@
 1437956760 f44fa67de4856d6cba661f4526fbd8949c44c192e91e82823fe175819aa1170cd818ff3909db38732507a5310127164e3af6852bc2525d8091277659424b701c SOURCE/PGME/ETERNITY/TDLGMEDI.INC
 1627994877 079dff4dd51fc6a5ebbe7d965504f8bcae4f50705c97a0a2721a2c881f11a46dcb09b0f5fff8d1c8c83357b5b1948c9d48e95c833b69535933308ec77dc4f380 SOURCE/PGME/ETERNITY/TDLGMENU.INC
 1437956760 4a52c16e9c312287d8cac6eef01436129bcbb0bfac495346fbe8a309dc7667b286385351c4edd9083aa99af1205314dabc77034d2348970491af7cbe64bf6294 SOURCE/PGME/ETERNITY/TDLGMOVE.INC
-1628248813 ae2cbdfc807d012f3aabaa1f43e9b8e18faffd5c9a8783ad732dc9940c1276430e5c712e9afa108e0a1888a04253ba88071c63aa4b23fdd9e4f717bbd7dac13a SOURCE/PGME/ETERNITY/TDLGOPTS.INC
+1628260747 0f80b66892f9610682691b57c4057f02c2cad974a2d3000c07e3d105f22b06e1aa5ed08f8761877b4546cd119a1ddb028abcde0aef571aba0ee1e7c7349eb7f4 SOURCE/PGME/ETERNITY/TDLGOPTS.INC
 1437956760 db29ee0e0d7b6511cd0b3ce94ef348df0f6168af2705b4027ef05a8fbd8ccd5cb11ccda46778f170f75a6675ec75ead2f09b0b4caf439ce1696613451224547b SOURCE/PGME/ETERNITY/TDLGPADD.INC
 1437956760 61e1198ee3d79b3394750cd91d55b03bfade495a15ff47c8c2983bc9297cd8c70423f58179565e94fa3dfaee3dd482e4e56b165785175f12b178f7b42b40482e SOURCE/PGME/ETERNITY/TDLGPDEL.INC
 1437956760 dd2e1c7fb981c08166603bb6cdad0fe02ffe3a9bb4e9ee9b3de96bec6ba3633e245666912defaff04b2715e82211f2f786ab2c84d2be5e7b6adf10b3b980db35 SOURCE/PGME/ETERNITY/TDLGPEDI.INC
 1437956760 88594149727ae9231b99fbeb0ef6c458e1a4b509021555c3c3912e965e7f900f337e5838157325f2c3964f84d47024bc47ba57943d8229b48c9cf83c9a08ca7c SOURCE/PGME/ETERNITY/TDLGPROG.INC
 1628190426 75ca897740231bb2b7fb0e5e333f4cdee6cd0d60c3a584a019d1a50c3930bf8614619eb6b4d610918115e6cd2eea8496c6780601bea4f4f4fb51da70acc484c0 SOURCE/PGME/ETERNITY/TMENUCAC.INC
 1628180257 d16fc6817d4bd1178ee272fe7b627f366813b36a72efdbd8dc08444746bf649d7c256838a668b13d7e02eec67ab0aefbe4523f781164ff85e4776da1bb479b91 SOURCE/PGME/ETERNITY/TPGME.INC
-1628243728 742249b684866f454da6e99aaf15a8c30cf3d6a55e524b7906420bebc05f425689b279f9e0f8552df6ad87911c1dd62dc55287c015eb2cb4432dd969cc845da2 SOURCE/PGME/ETERNITY/WHATSNEW.TXT
+1628264985 35b9faa13a964f3c707fd76efa817dc3fb4ea8be8ef4ecac06d747c46690e18c2345fa0ed5cb62361f7945d74e60d540181fdc3dba1184b5d268eb5b1c071979 SOURCE/PGME/ETERNITY/WHATSNEW.TXT
 1437956760 5e9d5bebb8de344f2a5e46e7a68a3c8ca8adb4e463f65ead217ff086d54832765ad80fbc400c5392ce5be660f425e0a30bc20ba117c178bc8774c9577d5f8a8c SOURCE/PGME/ETOOLS/EFNTDSGN.PAS
 1437956760 b6eea7f9c41e03cc924dfe169f31162e5b5bf4e52a9810348416a36da73241dbfe5c1257fee1433c2ca307f64e10f5de8f6ebb18da47b7a6a0b1d052ac3c8908 SOURCE/PGME/ETOOLS/ETOOL.PAS
 1437956760 99bf15c810f5b506b8a9da368d63f2b32f2f500168569a6f80a0ab0641c66ff65730cc67ce5be24fef0c6fbb8601f3682460f9c29cec967b319cb43425694b6e SOURCE/PGME/ETOOLS/ETOOLS.DEF
@@ -117,7 +117,7 @@
 1437956760 a6ce9ae213c080114abc745eef01d2f9c00d58771cff09747e46be8ecee756904b6431e51d0335cc2035a195e0f005cadd36c093b933d1de66580f565d5ff3b5 SOURCE/PGME/QUICKCRT/QSCRNSVR.PAS
 1437956760 16c17a4920432b652b7fba3a4eaa8f6489255e26c93e9c76e31e5d4e7d8ef228635d4d5b92c4952e54e020b5f410cf708bc98b69519c4e99ba3925e8c16efec7 SOURCE/PGME/QUICKCRT/QSPEAKER.PAS
 1437956760 b2296b39aa1375b4f69e824b98a18e42df78f9e4840ccfb0d1cdce0114b58d9fe59e6087b524094cfa11cd42be97a1d24cd82fd645c690464880cb4bb6dca460 SOURCE/PGME/QUICKCRT/QSTRINGS.INC
-1628246194 0b077510d951e641553a45f591612512f346245fceb20e2b424d786e1270592d6ac7cab632304e539f0162d0e80beb313a3e0cc052aa4e870752a1d6303f164d SOURCE/PGME/QUICKCRT/QSTRINGS.PAS
+1628259622 00679e955e8e1ac519fe979d9721c4c73f7266f3bcd6aff8e0d7dabf8c5f2d67f230c0d93cc44c9f4cc8127a3333354c454551c3f2a953ee5cc8e1d27268c2c7 SOURCE/PGME/QUICKCRT/QSTRINGS.PAS
 1437956760 3980f99fe0826d4ceb640c65b8d537c8c89fd966946522b68405b13797d1cea4dd06ea31fe2e409e47d3d8e79ee23d8704aae1dd73c9b58894f17e7995aa0a88 SOURCE/PGME/QUICKCRT/QTEST.PAS
 1628102094 5278af4bac84cc6bf435697aca701d6db1a5ac473db05b5e1d6442014e502596951148a44d5564c3ca233548924211bd02df455b09229ecad814db59b6f93d51 SOURCE/PGME/QUICKCRT/QTIMER.PAS
 1437956760 381833b133b59717492b4ec9507e5ec6d3af55e16bf2e0609278fc6793403b099b4ae424cb144bcf20fdfa98bb5aaab1ad4a9a2d3a728d9a8777b6d4514b95c3 SOURCE/PGME/QUICKCRT/README.md
@@ -170,7 +170,7 @@
 1628169185 438e24825a995691408e173f95e79d6c45540591cf7397020cbb03aebc40c216e8b74eb7016474798196794c72d5afc4efaa0108a387900d81f5f7791ce51c08 SOURCE/PGME/BUILD.BAT
 1627934430 f8383a5edc04b6113db78cda2143e29abaab2149c8c7ebbfa7bfe68739323e256fa5f767ce6651169501471fd6982629cb86004ad4e90f16aeb206d56dd4ac1a SOURCE/PGME/CLEAN.BAT
 1627980145 babd8780f308b8ecd082132a088db1402c0e38ddea4e337d1ad571e0c3d163dc94e030229a78192a04edd7be800df76e3848fd584fb8b94c52e42ed2d3ec763a SOURCE/PGME/CONTRIBUTING.md
-1628242319 594a900731ae66c39cc3db05bbff5fdf2c70b1cf5fbfa83843fa0d1abeb587a3ce31b9a9fb0420ef6a6f9aa6fdb550db29acb380eac471573abff1ae7d4b83e3 SOURCE/PGME/CUSTOM/config/ETERNITY.CFG
+1628260812 d06eb081a5e4499dcec52a96315cfe9f51205c8f1ffd78d6de44422063853002a9e8942ab4536df771805c90b57e31c5d3dbd128925446c7d006fb81709aa823 SOURCE/PGME/CUSTOM/config/ETERNITY.CFG
 1437956760 8d5d34d79cd66d983bea780a01827f225053c037d68593919f2f335343568747aed4542c7365e573cb55fa16b7a6494f6d4fb4aea18a4e8cad3fc02210bc2a80 SOURCE/PGME/CUSTOM/fonts/ALT814.FNT
 1437956760 79385d9b4c8cf9df9dae524a0ede786c297d25ebe1124824480fb597c768c4d4e126961fef1b3fd431059982fe3d64dceb7acb74c05a0de64d24fe68219aa70c SOURCE/PGME/CUSTOM/fonts/CAP816.FNT
 1591635961 b66d6996af50ddb82e46f2c1d5d6bcb081b781fbd8f39126bdfc9e2d7242fb232059ec7d0950b0013a686e05e9fe866ef3e2ea6434d12978e73a4f0425421509 SOURCE/PGME/CUSTOM/fonts/FR850-16.FNT
@@ -221,7 +221,7 @@
 1437956760 1e9001f9d361c8d79881fa2f8872b2f451ec7c31b673428ed3f8999e8867beab530db9061184894f2243751ccd6827aa45511e148058bc0cf41b0b18a34efcdd SOURCE/PGME/ETERNITY/SPLICE.PAS
 1628190330 24e261a1e4cb63bce2a9e13e062f11f64fee243304eeb0eb96f22373558c614c2bf6daf53a87a9c1ab70f3e333a487a1ffef52994bfcd5f8890dfb321d21e1c0 SOURCE/PGME/ETERNITY/TCACHEIT.INC
 1628153072 23d5ef3c235ded1ffe8ddf504a8e502ff4b26d0e28662f1a10a6313d7e31de27e13f1e53eca7d48d7878e9d3861f807b5f5714ece2381dea27996555c20383c1 SOURCE/PGME/ETERNITY/TDLGABOU.INC
-1628248364 610db5f4753d8ce6ab2d4eb233fe41efb25f43333710d9df3234aa48178336ea775a1d13915c2b10935814d045b3d088d8bda7a9698c1cfe361af926da1ff030 SOURCE/PGME/ETERNITY/TDLGCFG.INC
+1628264761 130726effada33907d4416be6128086a2dd37e38086d4e0cb4b09bb693ea2048b474215279c7a9634b2174fc21aa6a7881390d262ca915fa72160e5328838797 SOURCE/PGME/ETERNITY/TDLGCFG.INC
 1437956760 69e5752165dfbafb1ce193186fcb2e8956e04e7d1e5861a10917fb977615b106128f99e6b9695d6fe341bf4372d0865f2444f2dd348f76d67e91490eb959d9c8 SOURCE/PGME/ETERNITY/TDLGDOSC.INC
 1437956760 68364de6118e99d4ff4a9e63dab357fe3f9e0c0723a0ea0d805ab5014bbb5a0dc022d44f274fbf50f7a8ba43a8ee4ff8141a58df1929c430ad1e0eceaec8f799 SOURCE/PGME/ETERNITY/TDLGEXEC.INC
 1437956760 0cd7cd8d737cce876a833fef555f97a6f1198b3795837549fed60de712536b959a51ad36c75f3d3737e3554afd2b09ea9e6c7d4af1b3052efa1104e41cf138cc SOURCE/PGME/ETERNITY/TDLGLAUN.INC
@@ -230,14 +230,14 @@
 1437956760 f44fa67de4856d6cba661f4526fbd8949c44c192e91e82823fe175819aa1170cd818ff3909db38732507a5310127164e3af6852bc2525d8091277659424b701c SOURCE/PGME/ETERNITY/TDLGMEDI.INC
 1627994877 079dff4dd51fc6a5ebbe7d965504f8bcae4f50705c97a0a2721a2c881f11a46dcb09b0f5fff8d1c8c83357b5b1948c9d48e95c833b69535933308ec77dc4f380 SOURCE/PGME/ETERNITY/TDLGMENU.INC
 1437956760 4a52c16e9c312287d8cac6eef01436129bcbb0bfac495346fbe8a309dc7667b286385351c4edd9083aa99af1205314dabc77034d2348970491af7cbe64bf6294 SOURCE/PGME/ETERNITY/TDLGMOVE.INC
-1628248813 ae2cbdfc807d012f3aabaa1f43e9b8e18faffd5c9a8783ad732dc9940c1276430e5c712e9afa108e0a1888a04253ba88071c63aa4b23fdd9e4f717bbd7dac13a SOURCE/PGME/ETERNITY/TDLGOPTS.INC
+1628260747 0f80b66892f9610682691b57c4057f02c2cad974a2d3000c07e3d105f22b06e1aa5ed08f8761877b4546cd119a1ddb028abcde0aef571aba0ee1e7c7349eb7f4 SOURCE/PGME/ETERNITY/TDLGOPTS.INC
 1437956760 db29ee0e0d7b6511cd0b3ce94ef348df0f6168af2705b4027ef05a8fbd8ccd5cb11ccda46778f170f75a6675ec75ead2f09b0b4caf439ce1696613451224547b SOURCE/PGME/ETERNITY/TDLGPADD.INC
 1437956760 61e1198ee3d79b3394750cd91d55b03bfade495a15ff47c8c2983bc9297cd8c70423f58179565e94fa3dfaee3dd482e4e56b165785175f12b178f7b42b40482e SOURCE/PGME/ETERNITY/TDLGPDEL.INC
 1437956760 dd2e1c7fb981c08166603bb6cdad0fe02ffe3a9bb4e9ee9b3de96bec6ba3633e245666912defaff04b2715e82211f2f786ab2c84d2be5e7b6adf10b3b980db35 SOURCE/PGME/ETERNITY/TDLGPEDI.INC
 1437956760 88594149727ae9231b99fbeb0ef6c458e1a4b509021555c3c3912e965e7f900f337e5838157325f2c3964f84d47024bc47ba57943d8229b48c9cf83c9a08ca7c SOURCE/PGME/ETERNITY/TDLGPROG.INC
 1628190426 75ca897740231bb2b7fb0e5e333f4cdee6cd0d60c3a584a019d1a50c3930bf8614619eb6b4d610918115e6cd2eea8496c6780601bea4f4f4fb51da70acc484c0 SOURCE/PGME/ETERNITY/TMENUCAC.INC
 1628180257 d16fc6817d4bd1178ee272fe7b627f366813b36a72efdbd8dc08444746bf649d7c256838a668b13d7e02eec67ab0aefbe4523f781164ff85e4776da1bb479b91 SOURCE/PGME/ETERNITY/TPGME.INC
-1628243728 742249b684866f454da6e99aaf15a8c30cf3d6a55e524b7906420bebc05f425689b279f9e0f8552df6ad87911c1dd62dc55287c015eb2cb4432dd969cc845da2 SOURCE/PGME/ETERNITY/WHATSNEW.TXT
+1628264985 35b9faa13a964f3c707fd76efa817dc3fb4ea8be8ef4ecac06d747c46690e18c2345fa0ed5cb62361f7945d74e60d540181fdc3dba1184b5d268eb5b1c071979 SOURCE/PGME/ETERNITY/WHATSNEW.TXT
 1437956760 5e9d5bebb8de344f2a5e46e7a68a3c8ca8adb4e463f65ead217ff086d54832765ad80fbc400c5392ce5be660f425e0a30bc20ba117c178bc8774c9577d5f8a8c SOURCE/PGME/ETOOLS/EFNTDSGN.PAS
 1437956760 b6eea7f9c41e03cc924dfe169f31162e5b5bf4e52a9810348416a36da73241dbfe5c1257fee1433c2ca307f64e10f5de8f6ebb18da47b7a6a0b1d052ac3c8908 SOURCE/PGME/ETOOLS/ETOOL.PAS
 1437956760 99bf15c810f5b506b8a9da368d63f2b32f2f500168569a6f80a0ab0641c66ff65730cc67ce5be24fef0c6fbb8601f3682460f9c29cec967b319cb43425694b6e SOURCE/PGME/ETOOLS/ETOOLS.DEF
@@ -283,7 +283,7 @@
 1437956760 a6ce9ae213c080114abc745eef01d2f9c00d58771cff09747e46be8ecee756904b6431e51d0335cc2035a195e0f005cadd36c093b933d1de66580f565d5ff3b5 SOURCE/PGME/QUICKCRT/QSCRNSVR.PAS
 1437956760 16c17a4920432b652b7fba3a4eaa8f6489255e26c93e9c76e31e5d4e7d8ef228635d4d5b92c4952e54e020b5f410cf708bc98b69519c4e99ba3925e8c16efec7 SOURCE/PGME/QUICKCRT/QSPEAKER.PAS
 1437956760 b2296b39aa1375b4f69e824b98a18e42df78f9e4840ccfb0d1cdce0114b58d9fe59e6087b524094cfa11cd42be97a1d24cd82fd645c690464880cb4bb6dca460 SOURCE/PGME/QUICKCRT/QSTRINGS.INC
-1628246194 0b077510d951e641553a45f591612512f346245fceb20e2b424d786e1270592d6ac7cab632304e539f0162d0e80beb313a3e0cc052aa4e870752a1d6303f164d SOURCE/PGME/QUICKCRT/QSTRINGS.PAS
+1628259622 00679e955e8e1ac519fe979d9721c4c73f7266f3bcd6aff8e0d7dabf8c5f2d67f230c0d93cc44c9f4cc8127a3333354c454551c3f2a953ee5cc8e1d27268c2c7 SOURCE/PGME/QUICKCRT/QSTRINGS.PAS
 1437956760 3980f99fe0826d4ceb640c65b8d537c8c89fd966946522b68405b13797d1cea4dd06ea31fe2e409e47d3d8e79ee23d8704aae1dd73c9b58894f17e7995aa0a88 SOURCE/PGME/QUICKCRT/QTEST.PAS
 1628102094 5278af4bac84cc6bf435697aca701d6db1a5ac473db05b5e1d6442014e502596951148a44d5564c3ca233548924211bd02df455b09229ecad814db59b6f93d51 SOURCE/PGME/QUICKCRT/QTIMER.PAS
 1437956760 381833b133b59717492b4ec9507e5ec6d3af55e16bf2e0609278fc6793403b099b4ae424cb144bcf20fdfa98bb5aaab1ad4a9a2d3a728d9a8777b6d4514b95c3 SOURCE/PGME/QUICKCRT/README.md
