@@ -7,7 +7,7 @@
 	TYPE=CONFIG
 
 [PGM]
-    CPU_IDLE=ANY
+    CPU_IDLE=NONE
 	CANQUIT=TRUE
 	CLEAR=TRUE
 	PATH.MENU=
