@@ -2,9 +2,11 @@
 
 2021-08
 
+    Added CPU Idle/power saving option to Config Dialog.
+    Added "<none>" option to Config and Display Dialogs for File based options.
     Fix display options only save when theme was changed bug.
     Mouse flicker reduced some.
-    Added Config Dialog Option to turn sound on/off
+    Added Config Dialog option to turn sound on/off
     Added config file option to save power, CPU_IDLE=ANY, APM, HALT or NONE
     Added wait on return for individual programs, WAIT=OFF, FOREVER, DEFAULT or seconds.
     Added wait on return default per menu global WAIT=OFF, FOREVER or seconds.
